# async_project_example

./: .dockerignore  .gitignore  .gitlab-ci.yml  .releaserc.yaml  Dockerfile  README.md  coverage.xml  docker-compose.yml  entrypoint.sh  junit.xml  pyproject.toml  settings.py  setup.cfg  values.yml
app/: bus_service.py  database.py  event_handlers.py  huntflow_api.py  main.py  models.py  sync.py
app/utlis/: files.py  huntflow.py
migrations/: env.py
migrations/versions/: 4c25a9f23a36_add_applicants.py  e48a3c57d043_add_file_ids_column.py  eeaf0e41447a_add_last_sync_error_column.py
scripts/: pretty
tests/: conftest.py  test_async_client.py  test_huntflow_candidates.py
